Bug 2043324 - Order native anonymous content correctly in ComparePoints. r=emilio

ComparePoints and its helpers bailed out when a compared child was the
root of a native anonymous subtree, returning a fixed Some(1). That put
a ::before pseudo-element after its host's regular children, so nsFind's
endpoint check exited early and missed matches following the generated
content.

Teach the CompareChildNodes and CompareChildOffsetAndChildNode
primitives to order NAC via GetIndexInParent, and drop the now-redundant
NAC special cases in the callers.

Differential Revision: https://phabricator.services.mozilla.com/D303152